feat(backend): configure security, CORS, and update core services for role management